setup security and repositories